--- a/vue/maps2.html
+++ b/vue/maps2.html
@@ -113,7 +113,7 @@
             function addMarker(coords,map){
 
                 // This creates a new marker at the specified coordinates on the map
-                let marker = new google.maps.Marker({position:coords, map: map,icon:"http://maps.google.com/mapfiles/kml/paddle/orange-stars.png"});
+                let marker = new google.maps.Marker({position:coords, map: map,icon:"https://maps.google.com/mapfiles/kml/paddle/grn-circle.png"});
                 // I don't think we need this line of code, but not 100% sure.
                 let infoWindow = new google.maps.InfoWindow({content:"<h1>Current Location</h1>"});
                 // Set zoom level to 15
